@@ -284,6 +284,7 @@ Section /o "Additional programs" SEC02
   File "..\..\..\local\games\pioneers\iles.game"
   File "..\..\..\local\games\pioneers\lorindol.game"
   File "..\..\..\local\games\pioneers\Mini_another_swimming_pool_in_the_wall.game"
+  File "..\..\..\local\games\pioneers\north_america.game"
   File "..\..\..\local\games\pioneers\pond.game"
   File "..\..\..\local\games\pioneers\seafarers-gold.game"
   File "..\..\..\local\games\pioneers\seafarers.game"
@@ -476,6 +477,7 @@ Section Uninstall
   Delete "$INSTDIR\games\pioneers\seafarers.game"
   Delete "$INSTDIR\games\pioneers\seafarers-gold.game"
   Delete "$INSTDIR\games\pioneers\pond.game"
+  Delete "$INSTDIR\games\pioneers\north_america.game"
   Delete "$INSTDIR\games\pioneers\Mini_another_swimming_pool_in_the_wall.game"
   Delete "$INSTDIR\games\pioneers\lorindol.game"
   Delete "$INSTDIR\games\pioneers\iles.game"
